--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -227,6 +227,7 @@
 
   &__list {
     display: flex;
+    justify-content: center;
     gap: 30px;
     overflow-x: scroll;
     padding: 2rem;
@@ -242,7 +243,7 @@
     flex-direction: column;
     gap: 2rem;
     background-color: var(--blue-600);
-    min-width: 330px;
+    width: 330px;
     padding: 2rem;
     border-radius: 10px;
     color: white;
