--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -232,6 +232,10 @@
     overflow-x: scroll;
     padding: 2rem;
 
+    @media (max-width: 1100px) {
+      justify-content: flex-start;
+    }
+
     @media (max-width: 375px) {
       margin: 0 -1rem;
       padding: 2rem 1rem;
@@ -244,6 +248,7 @@
     gap: 2rem;
     background-color: var(--blue-600);
     width: 330px;
+    min-width: 330px;
     padding: 2rem;
     border-radius: 10px;
     color: white;
