update for safari browsers

--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -71,7 +71,7 @@
       height: 100vh;
       padding: min(30vh, 5rem) 2rem;
       transform: translateX(100%);
-      background-color: hsla(0, 0, 100%, 0.98);
+      background-color: hsla(0, 0%, 100%, 0.98);
       backdrop-filter: blur(5px);
       transition: transform 300ms ease-in;
     }
