--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -4,10 +4,19 @@
   box-sizing: border-box;
 }
 
-// minipod fan animation fix (disables it)
+// Safari v9+ minipod fan animation fix (disables it)
 @supports (-webkit-hyphens: none) {
   .fan-swing-base {
     animation: none;
+  }
+}
+
+// Safari v11+ minipod fan animation fix (disables it)
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    .fan-swing-base {
+      animation: none;
+    }
   }
 }
 
