scroll arrow color change

--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -712,6 +712,7 @@ i {
   }
 
   &__arrow {
+    stroke: var(--blue-900);
     transform: rotate(90deg);
     animation: scrollArrow 750ms linear alternate infinite;
   }
