--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -43,17 +43,17 @@
   &__pause,
   &__play {
     position: absolute;
-    left: -19px;
+    left: 50%;
     top: 330px;
     background-color: transparent;
     border: none;
     padding: 0;
-    transform: scale(3);
+    transform: translateX(-50%) scale(3);
     cursor: pointer;
 
     @media (max-width: 568px) {
-      top: 430px;
-      transform: scale(5);
+      top: 360px;
+      transform: translateX(-50%) scale(5);
     }
   }
 
