--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -123,11 +123,12 @@
 
   @media (max-width: 992px) {
     transform: scale(0.6);
+    top: 10vh;
   }
 
   @media (max-width: 568px) {
     transform: scale(0.5);
-    top: 15vh;
+    top: 5vh;
     right: 0;
   }
 
@@ -678,14 +679,43 @@ i {
 
 .scroll {
   position: absolute;
-  left: -61px;
-  top: 420px;
+  left: 50%;
+  top: 800px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   width: fit-content;
   gap: 0.3rem;
+  transform: translateX(-50%);
+
+  @media (max-width: 992px) {
+    top: 700px;
+  }
+
+  @media (max-width: 568px) {
+    top: 600px;
+  }
+
+  @media (max-width: 567px) {
+    top: 610px;
+  }
+
+  @media (max-width: 519px) {
+    top: 680px;
+  }
+
+  @media (max-width: 450px) {
+    top: 580px;
+  }
+
+  @media (max-width: 375px) {
+    top: 560px;
+  }
+
+  @media (max-width: 371px) {
+    top: 600px;
+  }
 
   &__mouse {
     position: relative;
