--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -109,7 +109,7 @@
 .hero__minipod {
   height: 0;
   position: relative;
-  top: 20vh;
+  top: 10rem;
   perspective: 1000px;
   transform: scale(0.8);
   --fan-tx: -175%;
@@ -123,11 +123,11 @@
 
   &--featured {
     @media (max-width: 992px) {
-      top: 10vh;
+      top: 5rem;
     }
   
     @media (max-width: 568px) {
-      top: 5vh;
+      top: 2.5rem;
       right: 0;
     }
   
