--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -8,34 +8,11 @@
   animation: none !important;
 }
 
-// All Chrome and Safari versions
-.selector:not(*:root) {
-  .fan-swing-base {
-    animation: none;
-  }
-}
-
-// Safari v6+ minipod fan animation fix (disables it)
-@media screen {
-  @media (min-width: 0px) {
-    .fan-swing-base {
-      animation: none;
-    }
-  }
-}
-
-// Safari v9+ minipod fan animation fix (disables it)
-@supports (-webkit-hyphens: none) {
-  .fan-swing-base {
-    animation: none;
-  }
-}
-
 // Safari v11+ minipod fan animation fix (disables it)
 @media not all and (min-resolution: 0.001dpcm) {
   @supports (-webkit-appearance: none) and (stroke-color: transparent) {
     .fan-swing-base {
-      animation: none;
+      animation: none !important;
     }
   }
 }
