--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -73,6 +73,10 @@
       }
     }
 
+    &-text {
+      pointer-events: all;
+    }
+
     &-6 {
       margin-top: -3rem;
 
@@ -83,6 +87,7 @@
 
     &-8 {
       margin-top: -7rem;
+      pointer-events: none;
 
       @media (max-width: 992px) {
         margin-top: 0;
