--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -31,6 +31,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-family: Inter, Roboto, sans-serif;
   line-height: 1.4;
   color: var(--blue-900);
