--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,21 +1,22 @@
 .header {
-  position: sticky;
-  max-width: 100%;
-  top: 0;
-  z-index: 9999;
-  background: hsl(0deg 0% 100% / 90%);
-  box-shadow: 0 2px 32px -12px hsla(213, 78%, 16%, 0.15);
-  backdrop-filter: blur(5px);
+
 }
 
 .navbar {
-  max-width: 1080px;
+  position: relative;
+  z-index: 99999;
+  border-bottom: 1px solid var(--cool-gray-300);
   padding: 1.25rem 2rem;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  transition: padding 150ms ease-in;
+  background: white;
+
+  &__container {
+    max-width: 1080px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: padding 150ms ease-in;
+  }
 
   @media (max-width: 568px) {
     padding: 1rem;
@@ -91,7 +92,7 @@
 
   &__link {
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 0.5rem 1rem;
     color: var(--blue-900);
 
     &:hover {
@@ -245,6 +246,52 @@
     &__text small {
       color: var(--cool-gray-600);
     }
+  }
+}
+
+.subnav {
+  position: sticky;
+  max-width: 100%;
+  top: 0;
+  z-index: 9999;
+  backdrop-filter: blur(5px);
+
+  border-bottom: 1px solid var(--cool-gray-300);
+  padding: 0.75rem 2rem;
+  background: var(--blue-150);
+
+  &__container {
+    max-width: 1080px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    transition: padding 150ms ease-in;
+  }
+
+  &__links {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 0.75rem;
+    padding: 0.25rem 0.5rem;
+  }
+
+  &__link {
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
+    color: var(--blue-900);
+
+    &--active {
+      font-weight: 600;
+      color: white;
+      border-radius: 5px;
+      background-color: var(--primary-color);
+    }
+  }
+
+  &__divider {
+    color: var(--cool-gray-300);
   }
 }
 
