--- a/app/scss/components/_header.scss
+++ b/app/scss/components/_header.scss
@@ -1,5 +1,4 @@
 .header {
-
 }
 
 .navbar {
@@ -62,6 +61,8 @@
 
     @media (max-width: 992px) {
       position: absolute;
+      opacity: 0;
+      pointer-events: none;
       z-index: 1;
       top: 0;
       right: 0;
@@ -71,10 +72,9 @@
       width: 50vw;
       height: 100vh;
       padding: min(30vh, 5rem) 2rem;
-      transform: translateX(100%);
       background-color: hsla(0, 0%, 100%, 0.98);
       backdrop-filter: blur(5px);
-      transition: transform 300ms ease-in;
+      transition: opacity 300ms ease-in;
     }
 
     @media (max-width: 568px) {
@@ -82,8 +82,6 @@
     }
 
     &[data-visible="true"] {
-      transform: translateX(0);
-
       .navbar__overlay {
         opacity: 1;
       }
@@ -267,6 +265,10 @@
     align-items: center;
     justify-content: flex-end;
     transition: padding 150ms ease-in;
+
+    @media (max-width: 992px) {
+      justify-content: center;
+    }
   }
 
   &__links {
@@ -275,12 +277,21 @@
     justify-content: flex-end;
     gap: 0.75rem;
     padding: 0.25rem 0.5rem;
+
+    @media (max-width: 568px) {
+      gap: 0.25rem;
+    }
   }
 
   &__link {
     font-size: 0.8rem;
     padding: 0.25rem 0.5rem;
     color: var(--blue-900);
+    vertical-align: middle;
+
+    @media (max-width: 568px) {
+      font-size: 0.7rem;
+    }
 
     &--active {
       font-weight: 600;
