fixed subnav scroll detection

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,7 +6,7 @@
 @use "components/buttons";
 @use "components/minipod";
 @use "components/hero";
-@use "components/header";
+@use "components/nav";
 @use "components/footer";
 @use "components/cards";
 @use "components/tables";
