--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,12 +1,14 @@
 @use "base/colors";
 @use "base/globals";
 @use "base/typography";
+@use "base/fonts";
 @use "base/images";
 @use "utils/spacing";
 @use "components/buttons";
 @use "components/minipod";
 @use "components/hero";
 @use "components/nav";
+@use "components/topbar";
 @use "components/footer";
 @use "components/cards";
 @use "components/tables";
