--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -87,7 +87,7 @@ small {
 
   &__body {
     max-width: 45ch;
-    color: var(--cool-gray-600);
+    color: var(--blue-gray-600);
 
     @media (max-width: 568px) {
       max-width: 30ch;
@@ -103,15 +103,15 @@ small {
   }
 
   &--light-blue {
-    color: var(--blue-100);
+    color: var(--blue-50);
   }
 
   &--red {
-    color: var(--danger-600);
+    color: var(--red-600);
   }
 
   &--blue {
-    color: var(--primary-color);
+    color: var(--blue-500);
   }
 
   &--dark-blue {
