--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -4,12 +4,13 @@
 }
 
 .btn {
-  cursor: pointer;
-  border-radius: 100vh;
-  padding: 7px 15px;
-  letter-spacing: -0.1px;
   font-weight: 500;
   max-width: max-content;
+  padding: 7px 15px;
+
+  cursor: pointer;
+  letter-spacing: -.1px;
+  border-radius: 100vh;
 
   &:hover {
     .btn__chevron {
@@ -28,7 +29,7 @@
   }
 
   &__chevron {
-    margin-left: 0.3rem;
+    margin-left: .3rem;
     stroke-width: 2;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -43,13 +44,13 @@
   &__pause,
   &__play {
     position: absolute;
-    left: 50%;
     top: 330px;
-    background-color: transparent;
-    border: none;
+    left: 50%;
     padding: 0;
-    transform: translateX(-50%) scale(3);
     cursor: pointer;
+    transform: translateX(-50%) scale(3);
+    border: none;
+    background-color: transparent;
 
     @media (max-width: 568px) {
       top: 360px;
@@ -62,19 +63,19 @@
   }
 
   &--primary {
-    background-color: var(--primary-color);
-    color: var(--blue-100);
+    color: var(--blue-50);
+    background-color: var(--blue-500);
 
     .btn__chevron path {
-      stroke: var(--blue-100);
+      stroke: var(--blue-50);
     }
   }
 
   &--secondary {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--blue-500);
 
     .btn__chevron path {
-      stroke: var(--primary-color);
+      stroke: var(--blue-500);
     }
   }
 
@@ -87,22 +88,23 @@
   }
 
   &--white {
-    background-color: var(--blue-100);
-    color: var(--primary-color);
+    color: var(--blue-500);
+    background-color: var(--blue-50);
 
     .btn__chevron path {
-      stroke: var(--primary-color);
+      stroke: var(--blue-500);
     }
   }
 
   &--form {
-    grid-column: 1/3;
     font-size: 1rem;
     font-weight: 600;
-    border: none;
     max-width: none;
     padding: 1rem 0;
+    border: none;
     border-radius: 5px;
+
+    grid-column: 1/3;
 
     @media (max-width: 568px) {
       grid-column: 1;
@@ -119,23 +121,23 @@
   }
 
   &--apply {
-    font-size: 0.7rem;
-    padding: 5px 6px 5px 9px;
+    font-size: .7rem;
     display: flex;
     align-items: center;
+    padding: 5px 6px 5px 9px;
 
     svg {
-      transform: scale(0.8);
+      transform: scale(.8);
     }
   }
 
   &--paypal {
+    max-width: none;
+    padding: 1rem 0;
+    border-radius: 5px;
+    background-color: #ffc43a;
     background-image: url(../../../images/icons/icon_paypal.svg);
     background-repeat: no-repeat;
     background-position: center center;
-    background-color: #ffc43a;
-    border-radius: 5px;
-    max-width: none;
-    padding: 1rem 0;
   }
 }
