--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -31,7 +31,7 @@
   transition: all 100ms ease-in;
 
   &:hover {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--blue-500);
     box-shadow: 0px 12px 32px 0px hsla(213, 78%, 16%, 0.13);
   }
 }
@@ -39,14 +39,14 @@
 .card-7,
 .card-9 {
   padding: 10px 20px;
-  background-color: var(--cool-gray-100);
+  background-color: var(--blue-gray-50);
   border-radius: 7px;
   border: 1px solid var(--blue-200);
   box-shadow: 0px 2px 12px 0px hsla(213, 78%, 16%, 0.09);
   transition: all 100ms ease-in;
 
   &:hover {
-    border: 1px solid var(--primary-color);
+    border: 1px solid var(--blue-500);
     box-shadow: 0px 12px 32px 0px hsla(213, 78%, 16%, 0.13);
   }
 
@@ -64,24 +64,31 @@
   &-1 {
     order: 1;
   }
+
   &-2 {
     order: 2;
   }
+
   &-3 {
     order: 3;
   }
+
   &-4 {
     order: 4;
   }
+
   &-5 {
     order: 5;
   }
+
   &-6 {
     order: 6;
   }
+
   &-7 {
     order: 7;
   }
+
   &-8 {
     font-size: 1.3rem;
     order: 8;
@@ -96,6 +103,7 @@
       grid-column: 1/2;
     }
   }
+
   &-9 {
     order: 9;
 
@@ -104,15 +112,13 @@
     }
   }
 
-  &__secondary {
-  }
+  &__secondary {}
 
-  &__list {
-  }
+  &__list {}
 
   &__list-item {
     position: relative;
-    color: var(--cool-gray-600);
+    color: var(--blue-gray-600);
     font-size: 0.8rem;
     padding-left: 2.5rem;
     letter-spacing: -0.1px;
