--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -8,7 +8,7 @@
   &__body {
     max-width: 30ch;
     font-size: 0.9rem;
-    color: var(--blue-100);
+    color: var(--blue-50);
 
     @media (max-width: 768px) {
       max-width: fit-content;
@@ -31,7 +31,7 @@
   }
 
   &__heading {
-    color: var(--cool-gray-400);
+    color: var(--blue-gray-400);
     text-transform: uppercase;
     letter-spacing: 1px;
   }
@@ -43,9 +43,9 @@
   }
 
   &__list-item {
-    color: var(--blue-100);
+    color: var(--blue-50);
     font-size: 0.9rem;
-    
+
     &:hover {
       color: var(--blue-200);
     }
@@ -53,17 +53,17 @@
 
   &__divider {
     height: 1px;
-    background-color: var(--cool-gray-600);
+    background-color: var(--blue-gray-600);
     margin: 2rem 0 1rem;
   }
 
   &__copyright {
-    color: var(--cool-gray-400);
+    color: var(--blue-gray-400);
   }
 
   &__social {
     cursor: pointer;
-    background-color: var(--primary-color);
+    background-color: var(--blue-500);
     width: 24px;
     height: 24px;
     padding: 0.3rem;
