--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -7,7 +7,7 @@
 
   &__body {
     max-width: 45ch;
-    color: var(--cool-gray-600);
+    color: var(--blue-gray-600);
   }
 
   &__illustrations {
@@ -32,7 +32,7 @@
       left: 50%;
       top: 20%;
       transform: translateX(-50%);
-      background-color: var(--blue-200);
+      background-color: var(--blue-gray-100);
       width: 200px;
       height: 100px;
       border-radius: 100vh;
@@ -130,12 +130,12 @@
     @media (max-width: 992px) {
       top: 5rem;
     }
-  
+
     @media (max-width: 568px) {
       top: 2.5rem;
       right: 0;
     }
-  
+
   }
 
   @media (max-width: 992px) {
@@ -179,7 +179,7 @@
   background-color: white;
   padding: 1em;
   border-radius: 10px;
-  border: 3px solid var(--warning-500);
+  border: 3px solid var(--yellow-500);
   transition: all 150ms ease-in;
 
   &::after {
@@ -188,7 +188,7 @@
 
     bottom: -0.7em;
     left: 45%;
-    border-top: 10px solid var(--warning-500);
+    border-top: 10px solid var(--yellow-500);
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
   }
@@ -303,6 +303,7 @@ i {
 }
 
 .spine {
+
   .side-1,
   .side-2,
   .side-3,
@@ -366,7 +367,7 @@ i {
     position: relative;
     width: 13em;
     height: 8.25em;
-    background-color: var(--primary-color);
+    background-color: var(--blue-500);
     transform: translate(54%, -130%) translateZ(0em) rotateX(0deg) rotateZ(-70deg) rotateY(90deg);
     pointer-events: none;
   }
@@ -581,7 +582,7 @@ i {
     width: 6em;
     height: 15em;
     border-radius: 7px;
-    background-color: var(--primary-color);
+    background-color: var(--blue-500);
   }
 
   .door-1 {
@@ -728,11 +729,11 @@ i {
     @media (max-width: 992px) {
       top: calc(var(--scroll-position) - 80px);
     }
-  
+
     @media (max-width: 568px) {
       top: calc(var(--scroll-position) - 160px);
     }
-  
+
     @media (max-width: 529px) {
       top: calc(var(--scroll-position) - 90px);
     }
@@ -740,7 +741,7 @@ i {
     @media (max-width: 450px) {
       top: calc(var(--scroll-position) - 130px);
     }
-  
+
     @media (max-width: 381px) {
       top: calc(var(--scroll-position) - 80px);
     }
@@ -785,6 +786,7 @@ i {
   from {
     transform: rotate(90deg) translateX(0px);
   }
+
   to {
     transform: rotate(90deg) translateX(5px);
   }
@@ -792,10 +794,10 @@ i {
 
 @keyframes pulse {
   from {
-    box-shadow: 0 0 0 2px var(--warning-500);
+    box-shadow: 0 0 0 2px var(--yellow-500);
   }
 
   to {
-    box-shadow: 0 0 0 5px var(--warning-500);
+    box-shadow: 0 0 0 5px var(--yellow-500);
   }
 }
