--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -5,12 +5,11 @@
   background: white;
 
   &__container {
-    max-width: 1080px;
-    padding: 0 2rem;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    max-width: 1080px;
+    margin: 0 auto;
     transition: padding 150ms ease-in;
   }
 
@@ -19,17 +18,17 @@
   }
 
   &__overlay {
-    content: "";
-    pointer-events: none;
     position: absolute;
     z-index: -1;
-    left: -100vw;
     top: 0;
+    left: -100vw;
     width: 100vw;
     height: 100vh;
-    opacity: 0;
-    background-color: hsla(213, 78%, 8%, 0.9);
+    content: "";
     transition: opacity 300ms ease-in;
+    pointer-events: none;
+    opacity: 0;
+    background-color: hsla(213, 78%, 8%, .9);
 
     @media (min-width: 992px) {
       background-color: transparent;
@@ -51,27 +50,27 @@
   }
 
   &__links {
+    font-weight: 600;
     display: flex;
     align-items: center;
     gap: 1rem;
-    font-weight: 600;
 
     @media (max-width: 992px) {
       position: absolute;
-      opacity: 0;
-      pointer-events: none;
       z-index: 1;
+      z-index: 1000;
       top: 0;
       right: 0;
-      z-index: 1000;
       flex-direction: column;
-      gap: 3rem;
       width: 50vw;
       height: 100vh;
       padding: min(30vh, 5rem) 2rem;
-      background-color: hsla(0, 0%, 100%, 0.98);
-      backdrop-filter: blur(5px);
       transition: opacity 300ms ease-in;
+      pointer-events: none;
+      opacity: 0;
+      background-color: hsla(0, 0%, 100%, .98);
+      gap: 3rem;
+      backdrop-filter: blur(5px);
     }
 
     @media (max-width: 568px) {
@@ -86,39 +85,39 @@
   }
 
   &__link {
+    padding: .5rem 1rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
     color: var(--blue-900);
 
     &:hover {
-      color: var(--primary-color);
+      color: var(--blue-500);
     }
   }
 
   &__hamburger {
-    cursor: pointer;
-    display: none;
     z-index: 9999;
-    aspect-ratio: 1;
-    background: none;
-    border: none;
+    display: none;
     width: 22px;
     height: 22px;
     padding: 0;
+    cursor: pointer;
+    border: none;
+    background: none;
+    aspect-ratio: 1;
 
     .line {
-      height: 2px;
       width: 100%;
+      height: 2px;
+      transition: transform 500ms cubic-bezier(.68, -.6, .32, 1.6);
       transform-origin: left;
-      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
-      background-color: var(--cool-gray-400);
+      background-color: var(--blue-gray-400);
     }
 
     @media (max-width: 992px) {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 0.3rem;
+      gap: .3rem;
     }
 
     &[aria-expanded="true"] {
@@ -134,11 +133,11 @@
 
   .dropdown {
     position: relative;
-    cursor: pointer;
     padding: 10px 20px;
+    cursor: pointer;
 
     &:hover {
-      color: var(--primary-color);
+      color: var(--blue-500);
     }
 
     &__title {
@@ -146,9 +145,9 @@
     }
 
     &__chevron {
-      margin-left: 0.3rem;
-      transform-origin: 25% 50%;
+      margin-left: .3rem;
       transition: all 150ms ease-out;
+      transform-origin: 25% 50%;
       stroke: var(--blue-900);
       stroke-width: 2;
       stroke-linecap: round;
@@ -160,38 +159,38 @@
     }
 
     &:hover .dropdown__chevron path {
-      stroke: var(--primary-color);
+      stroke: var(--blue-500);
     }
 
     &:hover .dropdown__menu {
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
       width: max-content;
+      gap: .5rem;
     }
 
     &__menu {
-      display: none;
       position: absolute;
-      left: 50%;
-      top: 45px;
-      transform: translateX(-50%);
-      background-color: white;
-      box-shadow: 0px 0px 24px 0px hsla(213, 78%, 16%, 0.15);
-      padding: 20px;
-      border-radius: 10px;
       z-index: 999;
+      top: 45px;
+      left: 50%;
+      display: none;
+      padding: 20px;
+      transform: translateX(-50%);
+      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0 0 24px 0 hsla(213, 78%, 16%, .15);
 
       &::before {
-        content: "";
-        width: 0;
-        height: 0;
         position: absolute;
         top: -28px;
         left: 50%;
+        width: 0;
+        height: 0;
+        content: "";
+        transform: rotate(-90deg) translateY(-50%);
         border: 15px solid transparent;
         border-left: 12px solid white;
-        transform: rotate(-90deg) translateY(-50%);
         filter: drop-shadow(0, 2px, 8px, #000);
       }
     }
@@ -199,13 +198,13 @@
     &__link {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
-      cursor: pointer;
       padding: 20px;
+      cursor: pointer;
       border-radius: 10px;
+      gap: .5rem;
 
       &:hover {
-        background-color: var(--blue-100);
+        background-color: var(--blue-50);
       }
 
       .btn__chevron {
@@ -239,27 +238,26 @@
     }
 
     &__text small {
-      color: var(--cool-gray-600);
+      color: var(--blue-gray-600);
     }
   }
 }
 
 .subnav {
   position: sticky;
-  max-width: 100%;
-  top: 0;
   z-index: 9999;
+  top: 0;
+  max-width: 100%;
+  padding: .75rem 2rem;
+  background: var(--blue-gray-50);
   backdrop-filter: blur(5px);
 
-  padding: 0.75rem 2rem;
-  background: var(--blue-150);
-
   &__container {
-    max-width: 1080px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    max-width: 1080px;
+    margin: 0 auto;
     transition: padding 150ms ease-in;
 
     @media (max-width: 992px) {
@@ -271,34 +269,34 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 0.75rem;
-    padding: 0.25rem 0.5rem;
+    padding: .25rem .5rem;
+    gap: .75rem;
 
     @media (max-width: 568px) {
-      gap: 0.25rem;
+      gap: .25rem;
     }
   }
 
   &__link {
-    font-size: 0.8rem;
-    padding: 0.25rem 0.5rem;
-    color: var(--blue-900);
+    font-size: .8rem;
+    padding: .25rem .5rem;
     vertical-align: middle;
+    color: var(--blue-900);
 
     @media (max-width: 568px) {
-      font-size: 0.7rem;
+      font-size: .7rem;
     }
 
     &--active {
       font-weight: 600;
       color: white;
       border-radius: 5px;
-      background-color: var(--primary-color);
+      background-color: var(--blue-500);
     }
   }
 
   &__divider {
-    color: var(--cool-gray-300);
+    color: var(--blue-gray-300);
   }
 }
 
