--- a/app/scss/components/_tables.scss
+++ b/app/scss/components/_tables.scss
@@ -5,8 +5,8 @@ table {
     min-width: 200px;
     text-align: left;
     letter-spacing: -0.1px;
-    border-bottom: 1px solid var(--blue-100);
-    border-top: 1px solid var(--blue-100);
+    border-bottom: 1px solid var(--blue-50);
+    border-top: 1px solid var(--blue-50);
     color: var(--blue-900);
   }
 
@@ -15,7 +15,7 @@ table {
     font-size: 0.8rem;
     background-color: white;
     color: var(--blue-900);
-    border: 1px solid var(--blue-100);
+    border: 1px solid var(--blue-50);
   }
 
   img {
@@ -28,7 +28,7 @@ table {
 }
 
 .table {
-  background-color: var(--blue-100);
+  background-color: var(--blue-50);
   box-shadow: 0px 48px 96px 0px hsla(213, 78%, 16%, 0.25);
 
   &__container {
@@ -65,11 +65,11 @@ table {
     font-size: 0.9rem;
 
     &:first-child {
-      border-left: 1px solid var(--blue-100);
+      border-left: 1px solid var(--blue-50);
     }
 
     &:last-child {
-      border-right: 1px solid var(--blue-100);
+      border-right: 1px solid var(--blue-50);
     }
   }
 
@@ -86,8 +86,8 @@ table {
     font-size: 0.8rem;
     font-weight: 400;
     background-color: white;
-    border: 1px solid var(--blue-100);
-    color: var(--cool-gray-500);
+    border: 1px solid var(--blue-50);
+    color: var(--blue-gray-500);
     transition: background-color 150ms ease-in;
     padding: 1.5rem 2rem 1.5rem calc(2rem + 22px); // specific padding only for the table subheadings that include an icon on the left
 
@@ -104,7 +104,7 @@ table {
     }
 
     &:hover {
-      color: var(--primary-color);
+      color: var(--blue-500);
       background-color: var(--blue-50);
 
       .table__tooltip {
