--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -1,10 +1,10 @@
 .btc {
-  background-color: var(--blue-100);
+  background-color: var(--blue-50);
   background-image: url("../../../images/backgrounds/btc-bg.jpg");
-  background-size: contain;
   background-repeat: no-repeat;
-  background-blend-mode: screen;
   background-position: 50% 50%;
+  background-size: contain;
+  background-blend-mode: screen;
 
   &__container {
     display: flex;
@@ -16,31 +16,32 @@
   }
 
   &__heading {
-    max-width: 17ch;
     font-size: 1.563rem;
     font-weight: 600;
     line-height: 1.2;
+    max-width: 17ch;
   }
 
   &__subheading {
-    color: var(--primary-color);
     font-weight: 600;
     margin-bottom: 1rem;
+    color: var(--blue-500);
   }
 
   &__body {
-    column-count: 2;
     padding: 1rem 0 1.5rem;
-    color: var(--cool-gray-600);
+    color: var(--blue-gray-600);
+    column-count: 2;
 
     @media (max-width: 568px) {
-      column-count: 1;
       max-width: 45ch;
+      column-count: 1;
     }
   }
 }
 
 .app {
+
   &--blue,
   &--white {
     clip-path: polygon(0 15%, 100% 0%, 100% 85%, 0% 100%);
@@ -55,26 +56,26 @@
   }
 
   &--blue {
-    background-color: var(--blue-600);
     margin-bottom: -7.6rem;
+    background-color: var(--blue-600);
   }
 
   &--white {
-    background-color: var(--blue-100);
     margin-bottom: -7.6rem;
+    background-color: var(--blue-50);
   }
 
   &__container {
-    height: 650px;
-    max-width: 1080px;
     display: grid;
-    grid-template-columns: 1fr auto;
     align-content: center;
+    max-width: 1080px;
+    height: 650px;
     margin: auto;
+    grid-template-columns: 1fr auto;
 
     @media (max-width: 992px) {
-      grid-template-columns: 1fr;
       height: 1000px;
+      grid-template-columns: 1fr;
     }
 
     @media (max-width: 768px) {
@@ -91,33 +92,33 @@
   }
 
   &__text {
-    max-width: 45ch;
     min-width: 45ch;
-    padding: 0 2rem;
+    max-width: 45ch;
     margin: 0 auto;
+    padding: 0 2rem;
     transform: translateY(110px);
     justify-self: flex-end;
 
     @media (max-width: 992px) {
-      transform: translateY(90px);
-      max-width: fit-content;
       min-width: 35ch;
+      max-width: fit-content;
+      transform: translateY(90px);
     }
 
     @media (max-width: 768px) {
-      transform: translateY(70px);
       min-width: auto;
+      transform: translateY(70px);
     }
 
     @media (max-width: 568px) {
-      transform: translateY(60px);
       min-width: auto;
+      transform: translateY(60px);
     }
   }
 
   &__body {
     &--dark {
-      color: var(--cool-gray-600);
+      color: var(--blue-gray-600);
     }
 
     &--light {
@@ -126,16 +127,16 @@
   }
 
   &__mockup {
-    max-height: 772px;
     min-width: 772px;
     max-width: 1152px;
+    max-height: 772px;
     transform: translateY(80px);
-    box-shadow: 0px 4px 96px rgba(9, 38, 73, 0.25);
+    box-shadow: 0 4px 96px rgba(9, 38, 73, .25);
 
     @media (max-width: 992px) {
-      transform: translateY(175px);
       min-width: auto;
       margin: 0 2rem;
+      transform: translateY(175px);
     }
 
     @media (max-width: 768px) {
@@ -143,8 +144,8 @@
     }
 
     @media (max-width: 568px) {
-      transform: translateY(115px);
       min-width: auto;
+      transform: translateY(115px);
     }
 
     img {
@@ -154,16 +155,16 @@
 
   &__subheading {
     font-weight: 600;
-    color: var(--blue-200);
+    color: var(--blue-100);
   }
 
   &__subheading--blue {
-    color: var(--primary-color);
+    color: var(--blue-500);
   }
 
   &__heading {
     line-height: 1.1;
-    color: var(--blue-100);
+    color: var(--blue-50);
   }
 
   &__heading--dark-blue {
@@ -171,9 +172,13 @@
   }
 }
 
+/* ==============================================
+   TESTIMONIALS
+   ============================================== */
+
 .testimonials {
   padding: 20rem 0;
-  background-color: var(--blue-100);
+  background-color: var(--blue-50);
 
   &__container {
     display: flex;
@@ -186,9 +191,9 @@
 
   &__heading {
     font-size: 2.441rem;
+    line-height: 1;
     position: relative;
     bottom: 3px;
-    line-height: 1;
     letter-spacing: -1.5px;
 
     @media (max-width: 568px) {
@@ -201,8 +206,8 @@
   }
 
   &__subheading {
-    margin-bottom: 0.5rem;
-    color: var(--primary-color);
+    margin-bottom: .5rem;
+    color: var(--blue-500);
   }
 
   &__icon {
@@ -210,26 +215,26 @@
   }
 
   &__chat-bubble {
-    transition: all 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
+    transition: all 600ms cubic-bezier(.17, .67, .75, 1.19);
     transform: scale(0) rotate(-90deg);
     transform-origin: 50% 50%;
   }
 
   &__right-person {
-    transition: all 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
+    transition: all 600ms cubic-bezier(.17, .67, .75, 1.19);
     transform: translateX(10px);
   }
 
   &__left-person {
-    transition: all 600ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
+    transition: all 600ms cubic-bezier(.17, .67, .75, 1.19);
     transform: translateX(-10px);
   }
 
   &__list {
     display: flex;
+    overflow-x: scroll;
     justify-content: center;
     gap: 30px;
-    overflow-x: scroll;
     padding: 2rem;
 
     @media (max-width: 1100px) {
@@ -246,19 +251,19 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    background-color: var(--blue-600);
     width: 330px;
     min-width: 330px;
     padding: 2rem;
-    border-radius: 10px;
     color: white;
+    border-radius: 10px;
+    background-color: var(--blue-600);
     box-shadow: 0 6px 12px rgb(2 44 94 / 15%), 0 6px 32px -8px rgb(0 94 213 / 50%);
   }
 
   .list-item {
     &__body {
       font-weight: 500;
-      color: var(--blue-100);
+      color: var(--blue-50);
     }
 
     &__divider {
@@ -275,7 +280,7 @@
     &__subheading {
       font-size: 12px;
       font-weight: 400;
-      letter-spacing: 0.3px;
+      letter-spacing: .3px;
       color: var(--blue-200);
     }
   }
@@ -296,9 +301,9 @@
 
   &__list {
     position: relative;
+    padding: 3rem 6rem;
     border-radius: 20px;
     background-color: var(--blue-900);
-    padding: 3rem 6rem;
 
     @media (max-width: 992px) {
       padding: 2rem;
@@ -306,17 +311,18 @@
 
     @media (max-width: 768px) {
       flex-direction: column;
-      padding: 2rem 3rem;
       gap: 2rem;
+      padding: 2rem 3rem;
     }
 
     &:hover {
       .list-item__heading {
-        transition: transform 500ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
+        transition: transform 500ms cubic-bezier(.17, .67, .75, 1.19);
         transform: translateY(-10px);
       }
+
       .list-item__subheading {
-        transition: transform 500ms cubic-bezier(0.17, 0.67, 0.75, 1.19);
+        transition: transform 500ms cubic-bezier(.17, .67, .75, 1.19);
         transform: translate(-50%, 25px);
       }
     }
@@ -330,10 +336,10 @@
 
   .list-item {
     &__heading {
-      color: var(--primary-color);
       font-size: 5rem;
       font-weight: 300;
       transition: transform 1s ease-out;
+      color: var(--blue-500);
 
       @media (max-width: 992px) {
         font-size: 4.5rem;
@@ -341,21 +347,21 @@
     }
 
     &__subheading {
+      font-size: .9rem;
+      font-weight: 500;
       position: absolute;
       top: 55%;
       left: 50%;
+      transition: transform 1s ease-out;
       transform: translate(-50%, -50%);
-      font-size: 0.9rem;
-      font-weight: 500;
-      color: var(--blue-100);
-      text-transform: uppercase;
       white-space: nowrap;
       letter-spacing: 2px;
-      transition: transform 1s ease-out;
-      text-shadow: 0px 0px 6px hsla(213, 78%, 16%, 1), 0px 4px 12px hsla(213, 78%, 16%, 1);
+      text-transform: uppercase;
+      color: var(--blue-50);
+      text-shadow: 0 0 6px hsla(213, 78%, 16%, 1), 0 4px 12px hsla(213, 78%, 16%, 1);
 
       @media (max-width: 992px) {
-        font-size: 0.8rem;
+        font-size: .8rem;
       }
     }
   }
@@ -371,26 +377,26 @@
   }
 
   &__plug {
-    transform: translate(2px);
     transition: all 150ms ease-in;
+    transform: translate(2px);
   }
 
   &__img {
     position: relative;
-    transform: translateX(0.5rem);
-    margin-bottom: -183px;
     overflow: visible;
+    margin-bottom: -183px;
+    transform: translateX(.5rem);
 
     @media (max-width: 992px) {
       left: 0;
-      transform: translateX(45px);
       margin-bottom: -161px;
+      transform: translateX(45px);
     }
   }
 
   &__cable {
-    stroke-dashoffset: 0;
     transition: stroke-dashoffset 10s linear;
+    stroke-dashoffset: 0;
   }
 
   &__power {
@@ -406,17 +412,17 @@
 
       .income__power-large-icon {
         transition: fill 300ms ease-out;
-        fill: var(--warning-500);
+        fill: var(--yellow-500);
       }
 
       .income__power-small-icon {
         transition: fill 300ms ease-out;
-        fill: var(--warning-600);
+        fill: var(--yellow-600);
       }
     }
 
     &-text {
-      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+      transition: transform 500ms cubic-bezier(.68, -.6, .32, 1.6);
     }
   }
 
@@ -433,7 +439,7 @@
     }
 
     &-text {
-      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+      transition: transform 500ms cubic-bezier(.68, -.6, .32, 1.6);
     }
   }
 
@@ -453,37 +459,37 @@
 
         path:nth-child(1) {
           transition: fill 300ms ease-out;
-          fill: var(--warning-600);
+          fill: var(--yellow-600);
         }
 
         path:nth-child(2) {
           transition: fill 300ms ease-out;
-          fill: var(--warning-500);
+          fill: var(--yellow-500);
         }
       }
     }
 
     &-text,
     &-coin {
-      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
+      transition: transform 500ms cubic-bezier(.68, -.6, .32, 1.6);
     }
   }
 
   &__body {
-    color: var(--cool-gray-600);
     max-width: 35ch;
+    color: var(--blue-gray-600);
   }
 
   &__heading {
     font-size: 3rem;
     font-weight: 900;
     line-height: 1;
-    letter-spacing: -1.5px;
     margin-top: 17px;
+    letter-spacing: -1.5px;
 
     @media (max-width: 992px) {
-      margin-top: 25px;
       font-size: 2rem;
+      margin-top: 25px;
     }
   }
 
