--- a/app/scss/sections/_team.scss
+++ b/app/scss/sections/_team.scss
@@ -60,6 +60,7 @@
 
   &__list-member,
   &__list-member--open-position {
+
     // small dot next to each team member
     &::before {
       content: "";
@@ -114,7 +115,7 @@
 
     img {
       border-radius: 100vh;
-      border: 1px solid var(--cool-gray-300);
+      border: 1px solid var(--blue-gray-300);
     }
 
     h6 {
@@ -122,7 +123,7 @@
     }
 
     &--open-position {
-      color: var(--cool-gray-600);
+      color: var(--blue-gray-600);
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
 
@@ -155,7 +156,7 @@
     background-repeat: no-repeat;
     background-position: 87% 35%;
     background-size: 25%;
-    background-color: var(--primary-color);
+    background-color: var(--blue-500);
     border-right: 8px solid var(--blue-300);
     border-left: 8px solid var(--blue-300);
     border-radius: 20px;
@@ -171,7 +172,7 @@
   &__heading {
     font-size: 2.441rem;
     line-height: 1.1;
-    color: var(--blue-100);
+    color: var(--blue-50);
 
     @media (max-width: 568px) {
       margin-bottom: -0.5rem;
@@ -189,7 +190,7 @@
 
   &__body {
     max-width: 45ch;
-    color: var(--blue-100);
+    color: var(--blue-50);
 
     @media (max-width: 568px) {
       max-width: max-content;
