--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1,12 +1,12 @@
 .card-grid {
   display: grid;
+  max-width: 1080px;
+  margin: -15vh auto 0;
+  padding: 7rem 2rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 30px;
   grid-row-gap: 30px;
-  max-width: 1080px;
-  margin: -15vh auto 0;
-  padding: 7rem 2rem;
 
   @media (max-width: 992px) {
     grid-template-columns: repeat(2, 1fr);
@@ -23,31 +23,32 @@
 .card-4,
 .card-5,
 .card-6 {
-  background-color: white;
-  border-radius: 10px;
-  border: 1px solid var(--blue-200);
-  box-shadow: 0px 2px 12px 0px hsla(213, 78%, 16%, 0.09);
   padding: 20px;
   transition: all 100ms ease-in;
+  border: 1px solid var(--blue-200);
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, .09);
 
   &:hover {
     border: 1px solid var(--blue-500);
-    box-shadow: 0px 12px 32px 0px hsla(213, 78%, 16%, 0.13);
+    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
   }
 }
 
 .card-7,
 .card-9 {
+  position: relative;
   padding: 10px 20px;
-  background-color: var(--blue-gray-50);
-  border-radius: 7px;
-  border: 1px solid var(--blue-200);
-  box-shadow: 0px 2px 12px 0px hsla(213, 78%, 16%, 0.09);
   transition: all 100ms ease-in;
+  border: 1px solid var(--blue-200);
+  border-radius: 7px;
+  background-color: var(--blue-gray-50);
+  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, .09);
 
   &:hover {
     border: 1px solid var(--blue-500);
-    box-shadow: 0px 12px 32px 0px hsla(213, 78%, 16%, 0.13);
+    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
   }
 
   img {
@@ -56,7 +57,50 @@
   }
 
   h6 {
-    font-size: 0.8rem;
+    font-size: .8rem;
+  }
+
+  &--deal {
+    border: 1px solid var(--yellow-400);
+    background-color: var(--yellow-50);
+    box-shadow: 0 2px 12px 0 hsla(44, 78%, 16%, 0.09);
+
+    &:hover {
+      border: 1px solid var(--yellow-500);
+      box-shadow: 0 12px 32px 0 hsla(44, 78%, 16%, 0.13);
+    }
+  }
+}
+
+.sparkle-container {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  background: hsl(0deg 0% 0% / 0%);
+}
+
+.sparkle {
+  position: absolute;
+  transform: scale(0);
+
+  &-1 {
+    left: -9px;
+  }
+
+  &-2 {
+    right: -9px;
+  }
+
+  &-3 {
+    left: -9px;
+    bottom: 0;
+  }
+
+  &-4 {
+    right: -9px;
+    bottom: 0;
   }
 }
 
@@ -95,8 +139,8 @@
 
     @media (max-width: 992px) {
       order: 9;
-      grid-column: 1/3;
       padding: 1rem 0;
+      grid-column: 1/3;
     }
 
     @media (max-width: 768px) {
@@ -112,26 +156,28 @@
     }
   }
 
-  &__secondary {}
 
-  &__list {}
+
+
 
   &__list-item {
+    font-size: .8rem;
+
     position: relative;
-    color: var(--blue-gray-600);
-    font-size: 0.8rem;
     padding-left: 2.5rem;
-    letter-spacing: -0.1px;
+    letter-spacing: -.1px;
+    color: var(--blue-gray-600);
   }
 
   &__list-item::before {
-    content: "";
     position: absolute;
-    left: 0;
     bottom: 50%;
-    transform: translateY(50%);
-    background-image: url(../../../images/icons/icon_checkmark-small.svg);
+    left: 0;
     width: 32px;
     height: 32px;
+
+    content: "";
+    transform: translateY(50%);
+    background-image: url(../../../images/icons/icon_checkmark-small.svg);
   }
 }
