minor color changes

--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -63,7 +63,7 @@
   }
 
   &--primary {
-    color: var(--blue-50);
+    color: #fff;
     background-color: var(--blue-500);
 
     .btn__chevron path {
