--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1,3 +1,10 @@
+/**
+ *
+ * The .card-grid sets up a grid for the specifications
+ * of the minipod on our product page.
+ *
+ */
+
 .card-grid {
   display: grid;
   max-width: 1080px;
