--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -8,6 +8,10 @@ form {
   padding: 2rem;
   border-radius: 10px;
 
+  @media (max-width: 992px) {
+    margin: 0 auto;
+  }
+
   @media (max-width: 568px) {
     grid-template-columns: repeat(1, 1fr);
   }
