fixed scroll for more on product page

--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -9,7 +9,7 @@
   display: grid;
   max-width: 1080px;
   margin: -15vh auto 0;
-  padding: 7rem 2rem;
+  padding: 1rem 2rem 7rem;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
   grid-column-gap: 30px;
