--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -14,7 +14,59 @@
 
     @media (max-width: 450px) {
       gap: 2rem;
-      padding: 4rem 1rem 25rem;
+      padding: 2rem 1rem 20rem;
+    }
+  }
+
+  &__minipod-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+  }
+
+  &__minipod {
+    height: 0;
+    position: relative;
+    top: 10rem;
+    perspective: 1000px;
+    transform: scale(0.8);
+    --fan-tx: -175%;
+
+    padding: 0;
+    margin: 0 auto;
+
+    *:not(:empty) {
+      transform-style: preserve-3d;
+    }
+
+    &--featured {
+      @media (max-width: 992px) {
+        top: 5rem;
+      }
+
+      @media (max-width: 568px) {
+        top: 2.5rem;
+        right: 0;
+      }
+
+    }
+
+    @media (max-width: 992px) {
+      transform: scale(0.6);
+    }
+
+    @media (max-width: 568px) {
+      transform: scale(0.5);
+      right: 0;
+    }
+
+    @media (max-width: 450px) {
+      top: 5rem;
+    }
+
+    @media (max-width: 375px) {
+      transform: scale(0.4);
     }
   }
 
@@ -39,11 +91,11 @@
     padding: 3rem 2rem 16rem;
 
     @media (max-width: 992px) {
-      padding: 6rem 2rem 6rem;
+      padding: 2rem 2rem 6rem;
     }
 
     @media (max-width: 568px) {
-      padding: 4rem 2rem 2rem;
+      padding: 2rem 2rem 2rem;
     }
   }
 
