font optimization fix

--- a/app/scss/base/_fonts.scss
+++ b/app/scss/base/_fonts.scss
@@ -6,4 +6,5 @@
     /* Pretty Modern Browsers */
     url("../../../fonts/PPRightGrotesk-WideBlack.ttf") format("truetype");
   /* Safari, Android, iOS */
+  font-display: swap;
 }
