made the navbar transparent

--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 99999;
   padding: 1.25rem 2rem;
-  background: white;
+  background: hsl(0deg 0% 100% / 10%);
 
   &__container {
     display: flex;
